--- a/Rutas/app/src/debug/res/values/google_maps_api.xml
+++ b/Rutas/app/src/debug/res/values/google_maps_api.xml
@@ -21,6 +21,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        YOUR_KEY_HERE
+        AIzaSyBcWuOeB-E5DtqHkBcB2M_dPnQm83mavIs
     </string>
 </resources>
