--- a/Rutas/app/src/main/res/layout/activity_main3.xml
+++ b/Rutas/app/src/main/res/layout/activity_main3.xml
@@ -7,17 +7,22 @@
     tools:context="com.example.aitor.rutas.Main3Activity">
 
     <LinearLayout
-        android:layout_width="412dp"
+        android:layout_width="395dp"
         android:layout_height="625dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="-9dp">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.07"
+            android:layout_weight="0.02"
             android:text="Ruta"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
@@ -26,7 +31,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.18"
+            android:layout_weight="0.04"
             android:text="Dificultad"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
@@ -35,17 +40,18 @@
             android:id="@+id/editText2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.39"
+            android:layout_weight="0.03"
             android:ems="10"
             android:inputType="textMultiLine"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="280dp" />
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView2"
+        <fragment
+            android:id="@+id/fragment"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.39" />
+            android:layout_height="250dp"
+            tools:context="com.example.aitor.rutas.MapsActivity" />
 
     </LinearLayout>
 
