--- a/Rutas/app/src/main/res/layout/activity_maps.xml
+++ b/Rutas/app/src/main/res/layout/activity_maps.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
     android:layout_marginStart="8dp"
@@ -48,11 +48,11 @@
         android:id="@+id/tvdificultad"
         android:layout_width="match_parent"
         android:layout_height="25dp"
+        android:layout_weight="0.14"
         android:textSize="18sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        android:layout_weight="0.14" />
+        tools:layout_editor_absoluteY="0dp" />
 
     <TextView
         android:id="@+id/etiquetaDescripcion"
@@ -68,19 +68,19 @@
         android:id="@+id/tvdescripcion"
         android:layout_width="match_parent"
         android:layout_height="249dp"
+        android:layout_weight="0.14"
         android:clickable="false"
         android:cursorVisible="false"
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:inputType="none"
-        android:layout_weight="0.14" />
+        android:inputType="none" />
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="145dp"
-        tools:context="com.example.aitor.rutas.MapsActivity"
-        android:layout_weight="0.14" />
+        android:layout_weight="0.14"
+        tools:context="com.example.aitor.rutas.MapsActivity" />
 </LinearLayout>
